--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,15 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+header{
+  width: 100%;
+  height: 3rem;
+  background-color: blue;
+  color: white;
+  text-align: center;
+}
+
+body{
+  color: black;
+}
