--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -4,3 +4,13 @@
 * {
     font-family: 'Inter', sans-serif;
 }
+
+:root {
+    --title-green: #0a3186;
+    --title-orange: #1e4175;
+    --title-yellow: #248dad;
+    --title-blue: #43c2e7;
+    --subtitle-grey: #798289;
+    --background-grey: #EBECED;
+    --background-yellow: rgba(250, 176, 23, .9);
+}
