--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ header{
   width: 100%;
   height: 3rem;
   background-color: blue;
-  color: white;
+  color: rgb(0, 0, 0);
   text-align: center;
 }
 
